I have been able to mainly on the myrounds page, and achieve the following.1.Users have 3 tabs they can choose from , rounds created, rounds joined ( still yet to work on this one) and History( This is for the rounds that have already past. I added an extra column to the database(is_active) which turns off if the current date and time of the round is in the past. 2. I have worked on the frontend and backend validation of the edit pop modal, to ensure the data the user decides to edit is valid and not out of place

--- a/css/myrounds.css
+++ b/css/myrounds.css
@@ -133,6 +133,14 @@ header{
         flex-direction:column;
 
     }
+    #round-tabs{
+        gap:6px;
+    }
+
+    .tab-button{
+        padding:12px;
+        font-size:14px;
+    }
 
 }
 
@@ -187,4 +195,29 @@ header{
     background:#ff5b5b;
     color:white;
     cursor:pointer;
+}
+
+#round-tabs{
+    display:flex;
+    gap:10px;
+    margin-bottom:20px;
+}
+
+.tab-button{
+    flex:1;
+    border:none;
+    padding:14px;
+    border-radius:12px;
+    background:white;
+    color:#4da6ff;
+    font-weight:600;
+    cursor:pointer;
+}
+.tab-button:hover{
+    background:#4da6ff;
+    color:white;
+}
+.active-tab{
+    background:#4da6ff;
+    color:white;
 }
